# Vexorbis-swarm-mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  README.md  SECURITY.md  analyze_logs.py  benchmark_search.py  build_log.txt  debug_indexer.py  docker-compose.yml  flake8_errors.txt  gitworkerplan.md  mcp_gateway.py  orchestrator.py  pyproject.toml  server.py  setup.cfg  validate_all.py
docs/ai/: PLAN.md  ROADMAP.md  agent-guide.md  debugging-playbook.md  examples.md  tool-reference.md
k8s/: network-policy.yaml
mcp_core/: codebase_profiler.py  config_loader.py  git_helpers.py  github_mcp_client.py  llm.py  mutation_audit.py  orchestrator_loop.py  postgres_client.py  search_engine.py  stack_detector.py  startup_checks.py  swarm_schemas.py  toolchain_manager.py  worker_prompts.py
scripts/: cleanup.py  dexec.py  docker_cleanup.py  ingest_gh_actions_knowledge.py  mcp_discovery.py  migrate_archive.py  migrate_error_log.py  publish_changes.py  simulate_meta_planner.py  verify_db_migration.py  verify_telemetry.py
templates/: agent_response_schema.py
tests/: __init__.py  test_context_pruner.py  test_debug_mode.py  test_deliberate.py  test_deliberate_verbosity.py  test_error_provenance.py  test_github_mcp_client.py  test_memory_isolation.py  test_meta_direct.py  test_provenance.py  test_provenance_integration.py  test_rpc.py  test_search_engine.py  test_server_startup.py  test_session_state.py  test_skills_execution.py  test_telemetry_live.py  test_vector_archive.py
(+91 files in other folders)
